--- a/lesson8/DataAccessLayer/App.config
+++ b/lesson8/DataAccessLayer/App.config
@@ -23,5 +23,13 @@
                                                   App = EntityFramework;"
          
          providerName="System.Data.SqlClient"/>
+    <add name="User" connectionString="data source = localhost;
+                                                  initial catalog = users;
+                                                  integrated security = False;
+                                                  user = sa;
+                                                  password = student;
+                                                  App = EntityFramework;"
+         
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
